# Jogo_Debate

./: .env  .gitignore  README.md  base.html  chat.js  index.html  main.py  pyproject.toml  style.css
app/: main.py
frontend/css/: style.css
templates/: base.html
